export type AccountStatus = 'PendingActivation' | 'Active' | 'Suspended' | 'Locked' | 'Disabled';

export interface UserAccount {
  id: string;
  email: string;
  isAdmin: boolean;
  isBlocked: boolean;
  accountStatus: AccountStatus;
  lastLoginAtUtc: string | null;
}

export interface AuthToken {
  accessToken: string;
  expiresAtUtc: string;
  refreshToken?: string | null;
}

export interface LoginRequest {
  email: string;
  password: string;
}

export interface LoginResponse {
  user: UserAccount;
  token: AuthToken;
}

export interface RegisterCustomerRequest {
  email: string;
  password: string;
  firstName: string;
  lastName: string;
  phone: string;
  defaultAddressId?: string | null;
}

export interface RegisterSellerRequest {
  email: string;
  password: string;
  businessName: string;
  registrationNumber: string;
  payoutInformation: string;
  defaultAddressId?: string | null;
}

export type RegisterRequest =
  | ({ accountType: 'customer' } & RegisterCustomerRequest)
  | ({ accountType: 'seller' } & RegisterSellerRequest);

export interface CustomerProfile {
  id: string;
  userId: string;
  firstName: string;
  lastName: string;
  phone: string;
  defaultAddressId?: string | null;
}

export interface SellerProfile {
  id: string;
  userId: string;
  businessName: string;
  registrationNumber: string;
  payoutInformation: string;
  defaultAddressId?: string | null;
  verificationStatus: string;
  verifiedAtUtc?: string | null;
}

export interface RegistrationResponse {
  user: UserAccount;
  customer?: CustomerProfile | null;
  seller?: SellerProfile | null;
}
